--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Nina Carducci photographe" />
+	<meta name="description" content="Photographe Nina Carducci - 68 avenue Alsace-Lorraine, 33200 Bordeaux - Tel: 05.56.67.78.89 - Je réponds au téléphone lundi au vendredi entre 10h et 19h." />
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,11 +13,11 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-	<title>Nina Carducci Photographe</title>
+	<title itemscope itemtype="https://schema.org/LocalBusiness">Nina Carducci Photographe</title>
 </head>
 <body>
 <div class="top-header">
-	<h1 class="name">Nina Carducci</h1>
+	<h1 class="name" itemprop="owns">Nina Carducci</h1>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
@@ -58,11 +58,11 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Nina Carducci">
+		<img itemprop="photo" src="./assets/images/nina.webp" alt="Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
-		<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
+		<h3 itemprop="description" class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
@@ -70,16 +70,16 @@
 <div id="gallery">
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
-		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Photo concert Aaron Paul" />
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait entreprise Ali Morshedlou" />
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Portrait entreprise Jason Goodman" />
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Photo mariage Hannah Busing" />
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait Ade Tunji" />
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Photo mariage Jakob Owens" />
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg - 443cl1uR_8-unsplash.webp" alt="Portrait Nino Van Prattenburg" />
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Photo concert Austin Neill" />
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait entreprise Mateus Campos" />
+		<div itemprop="workExample" class="gallery" style="display: none">
+			<img itemprop="image" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Photo concert Aaron Paul" />
+			<img itemprop="image" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait entreprise Ali Morshedlou" />
+			<img itemprop="image" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Portrait entreprise Jason Goodman" />
+			<img itemprop="image" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Photo mariage Hannah Busing" />
+			<img itemprop="image" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait Ade Tunji" />
+			<img itemprop="image" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Photo mariage Jakob Owens" />
+			<img itemprop="image" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg - 443cl1uR_8-unsplash.webp" alt="Portrait Nino Van Prattenburg" />
+			<img itemprop="image" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Photo concert Austin Neill" />
+			<img itemprop="image" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait entreprise Mateus Campos" />
 		</div>
 	</div>
 	<div class="quote">
@@ -91,37 +91,37 @@
 		</figure>
 	</div>
 </div>
-<div id="services">
+<div itemprop="hasOfferCatalog" id="services">
 	<h2 class="title">Mes services</h2>
-	<div class="container">
-		<div class="service">
-			<div class="service__description">
-				<h3>Shooting photo</h3>
+	<div  class="container">
+		<div itemprop="itemListElement" class="service">
+			<div itemprop="itemOffered" class="service__description">
+				<h3 itemprop="name">Shooting photo</h3>
 				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
 			</div>
 			<div class="service__price">
-				<h3>350€/demi journée</h3>
+				<h3 itemprop="priceRange">350€/demi journée</h3>
 				<span>Matériel, déplacement inclus</span>
 			</div>
 
 		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Retouches</h3>
+		<div itemprop="itemListElement" class="service">
+			<div itemprop="itemOffered" class="service__description">
+				<h3 itemprop="name">Retouches</h3>
 				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
 			</div>
 			<div class="service__price">
-				<h3>50€/photo</h3>
+				<h3 itemprop="priceRange">50€/photo</h3>
 				<span>2 AR par photo</span>
 			</div>
 		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Album photos</h3>
+		<div itemprop="itemListElement" class="service">
+			<div itemprop="itemOffered" class="service__description">
+				<h3 itemprop="name">Album photos</h3>
 				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
 			</div>
 			<div class="service__price">
-				<h3>400€ album A4</h3>
+				<h3 itemprop="priceRange">400€ album A4</h3>
 				<span>30 pages recto/verso</span>
 			</div>
 		</div>
