ajout meta open graph 22/3/2023

--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title itemscope itemtype="https://schema.org/LocalBusiness">Nina Carducci Photographe</title>
+	<!-- Primary Meta Tags -->
+	<meta name="title" content="Nina Carducci Photographe" />
+	<meta name="description" content="Photographe Nina Carducci - 68 avenue Alsace-Lorraine, 33200 Bordeaux - Tel: 05.56.67.78.89 - Je réponds au téléphone lundi au vendredi entre 10h et 19h." />
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://metatags.io/" />
+	<meta property="og:title" content="Nina Carducci Photographe" />
+	<meta property="og:description" content="Photographe Nina Carducci - 68 avenue Alsace-Lorraine, 33200 Bordeaux - Tel: 05.56.67.78.89 - Je réponds au téléphone lundi au vendredi entre 10h et 19h." />
+	<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://metatags.io/" />
+	<meta property="twitter:title" content="Nina Carducci Photographe" />
+	<meta property="twitter:description" content="Photographe Nina Carducci - 68 avenue Alsace-Lorraine, 33200 Bordeaux - Tel: 05.56.67.78.89 - Je réponds au téléphone lundi au vendredi entre 10h et 19h." />
+	<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+	<!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
 <div class="top-header">
