vérif ris snippet 26/3/2023

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="./assets/maugallery.js"></script>
 	<script defer src="./assets/scripts.js"></script>
-	<title itemscope itemtype="https://schema.org/LocalBusiness">Nina Carducci Photographe</title>
+	<title>Nina Carducci</title>
 	<!-- Primary Meta Tags -->
 	<meta name="title" content="Nina Carducci Photographe" />
 	<meta name="description" content="Photographe Nina Carducci - 68 avenue Alsace-Lorraine, 33200 Bordeaux - Tel: 05.56.67.78.89 - Je réponds au téléphone lundi au vendredi entre 10h et 19h." />
@@ -31,9 +31,9 @@
 	<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 	<!-- Meta Tags Generated with https://metatags.io -->
 </head>
-<body>
+<body itemscope itemtype="https://schema.org/LocalBusiness">
 <div class="top-header">
-	<h1 class="name" itemprop="owns">Nina Carducci</h1>
+	<h1 class="name" itemprop="name">Nina Carducci</h1>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
