--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 	<!-- Meta Tags Generated with https://metatags.io -->
 </head>
-<body itemscope itemtype="https://schema.org/LocalBusiness">
+<body itemscope itemtype="https://schema.org/Organization">
 <div class="top-header">
 	<h1 class="name" itemprop="name">Nina Carducci</h1>
 	<div class="nav">   
