--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta name="description" content="Photographe Nina Carducci - 68 avenue Alsace-Lorraine, 33200 Bordeaux - Tel: 05.56.67.78.89 - Je réponds au téléphone lundi au vendredi entre 10h et 19h." />
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script defer src="./assets/maugallery.js"></script>
-	<script defer src="./assets/scripts.js"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer ></script>
 	<title>Nina Carducci</title>
 	<!-- Primary Meta Tags -->
 	<meta name="title" content="Nina Carducci Photographe" />
